--- a/styling/openWeatherAPICall.css
+++ b/styling/openWeatherAPICall.css
@@ -4,20 +4,7 @@
 /*default is mobile, made for 320px-480px*/
 
 
-#bossDiv {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    /*background-image: url("./img/ocean-swirl-bg.jpeg");*/
-    /*background-image: url("https://thumbs.gfycat.com/AncientGreenColt-size_restricted.gif");*/
-    background-image: url("img/paid-istock-beach.jpg");
-    background-size: 100vw 100vh;
-    overflow: scroll;
-    /*z-index: 4;*/
 
-}
 
 #weatherBaseContainer {
     display: flex;
